--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,460 @@
-.App {
-  text-align: center;
+/* Todo: Figure out challenge side resize*/
+/* Todo: Media queries for modal */
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500&display=swap");
+
+:root {
+  --primary-background: #202225;
+  --secondary-background: #2f3136;
+  --card-background: #3a3c42;
+  --title-text: #809bff;
+  --primary-text: #fff;
+  --secondary-text: #dcddde;
+  --tertiary-text: #7d8088;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  background-color: #202225;
+  color: var(--primary-text);
+  font-family: Arial, Helvetica, sans-serif;
+  height: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+h1 {
+  color: var(--title-text);
+  font-family: "Roboto Slab", serif;
+  font-weight: 500;
+  margin: 0;
+}
+
+button {
+  margin-top: 1rem;
+  background: #6271c0;
+  color: #fff;
+  padding: 8px 15px;
+  border-radius: 4px;
+  border: none;
+  font-size: 0.95rem;
+  font-family: "Roboto Slab", serif;
+  font-weight: 300;
+}
+
+button:hover {
+  cursor: pointer;
+  background: #809bff;
+}
+
+i {
+  color: var(--secondary-text);
+}
+
+i:hover {
+  color: var(--primary-text);
+
+  cursor: pointer;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
+
+.modal-content {
+  background: var(--secondary-background);
+  width: 30%;
+  margin: 15% auto;
+  padding: 2rem;
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.042), 0 41.8px 33.4px rgba(0, 0, 0, 0.05),
+    0 100px 80px rgba(0, 0, 0, 0.07);
+  border-radius: 6px;
+}
+
+.modal-header {
+  padding: 1rem 1rem 0;
+}
+
+.modal-body {
+  padding: 1rem;
+}
+
+.modal-body form {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.modal-body input,
+.modal-body textarea {
+  padding: 1rem;
+  margin-bottom: 0.5rem;
+  border: 1px solid rgba(128, 127, 127, 0.2);
+  border-radius: 6px;
+  background: #18191b;
+  color: var(--primary-text);
+  font-size: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.modal-footer {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.modal-footer a {
+  color: var(--primary-text);
+  margin: 0 1.5rem 0.5rem 0;
+}
+
+.nav {
+  background: var(--secondary-background);
+  display: flex;
+  justify-content: space-between;
+  padding: 0.5rem 1rem;
+}
+
+.nav h3 {
+  color: #6271c0;
+  letter-spacing: 0.15rem;
+  font-family: "Times New Roman", Times, serif;
+}
+
+.fa-chess-knight {
+  color: var(--secondary-background);
+  background: var(--secondary-text);
+  padding: 8px 8px;
+  border-radius: 50%;
+}
+
+.fa-chess-knight:hover {
+  background: var(--primary-text);
+  color: var(--secondary-background);
+}
+
+.user-menu-container {
+  display: none;
+  background: #18191b;
+  position: absolute;
+  top: 3rem;
+  right: 0;
+  padding: 1rem;
+  width: 12rem;
+}
+
+.show {
+  display: block;
+}
+
+.user-menu li {
+  margin-top: 1rem;
+}
+
+.user-menu hr {
+  margin-top: 1rem;
+}
+
+.user-menu a {
+  text-decoration: none;
+  color: var(--primary-text);
+}
+
+.container {
+  width: 80%;
+  margin: 3rem auto;
+  display: flex;
+  height: 900px;
+  align-items: stretch;
+}
+
+.heading {
+  font-weight: lighter;
+  color: var(--secondary-text);
+}
+
+.challenge-submission-area {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  height: 900px;
+}
+
+.challenge-container,
+.submission-container {
+  background: var(--secondary-background);
+  padding: 3.3rem;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.05),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.06), 0 12.5px 10px rgba(0, 0, 0, 0.07);
+  margin-right: 1rem;
+}
+
+.challenge-container {
+  margin-bottom: 1rem;
+}
+
+.challenge-header h1 {
+  color: var(--primary-text);
+}
+
+iframe {
+  margin: 1.5rem 0 1rem;
+  width: 100%;
+  height: 400px;
+}
+
+.challenge-container {
+  flex-grow: 1;
+}
+
+.discussion-area {
+  background: var(--secondary-background);
+  padding: 0.5rem;
+  border-radius: 6px;
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035);
+  display: flex;
+  flex-direction: column;
+  overflow-y: hidden;
+  max-height: 900px;
+  flex-grow: 1;
+}
+
+.discussion-header-container {
+  display: flex;
+  flex-shrink: 0;
+  margin-bottom: 1rem;
+  padding: 3rem 1.5rem 0;
+}
+
+.discussion-header-container button {
+  margin-top: auto;
+  margin-left: auto;
+}
+
+.questions-container {
+  overflow-y: auto;
+}
+
+.questions-container::-webkit-scrollbar {
+  width: 1.15rem;
+}
+
+.questions-container::-webkit-scrollbar-track {
+  background: #18191b;
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+}
+
+.questions-container::-webkit-scrollbar-thumb {
+  background-color: var(--card-background);
+  border: 3px solid transparent;
+  border-radius: 10px;
+  background-clip: content-box;
+}
+
+.questions-thread {
+  display: flex;
+  flex-direction: column;
+}
+
+.question-card {
+  /* margin: 0.5rem 0 0; */
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  padding: 1rem;
+  background: var(--card-background);
+  flex-shrink: 0;
+}
+
+.question-card:nth-child(n + 2) {
+  margin-top: 0.5rem;
+}
+
+.question-header {
+  display: flex;
+  font-size: 0.9rem;
+}
+
+.name {
+  margin-right: 1rem;
+  font-weight: lighter;
+  color: var(--secondary-text);
+}
+
+.created-at {
+  color: var(--tertiary-text);
+}
+
+.fa-bookmark {
+  margin-left: auto;
+}
+
+.question-body {
+  padding: 0.5rem 0;
+}
+
+.question-footer {
+  display: flex;
+}
+
+.answer-count,
+.comment-count {
+  color: var(--tertiary-text);
+  font-size: 0.9rem;
+}
+
+.answer-count {
+  margin-right: 1rem;
+}
+
+.view-thread {
+  margin-left: auto;
+}
+
+.view-thread a {
+  color: #809bff;
+  font-size: 0.9rem;
+  font-family: "Times New Roman", Times, serif;
+  font-weight: bold;
+}
+
+@media all and (max-width: 1540px) {
+  iframe {
+    height: 395px;
   }
-  to {
-    transform: rotate(360deg);
+  .modal-content {
+    width: 50%;
+    margin: 10% auto;
+  }
+  .container {
+    width: 90%;
+  }
+}
+
+@media all and (max-width: 1045px) {
+  .modal-content {
+    width: 50%;
+    margin: 10% auto;
+  }
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .submission-container,
+  .challenge-container {
+    margin-right: 0;
+  }
+
+  .discussion-area {
+    overflow: visible;
+    margin-bottom: 1rem;
+  }
+
+  .challenge-container,
+  .submission-container {
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+}
+
+/* TODO: write code for modal margin landscape view */
+@media all and (max-width: 900px) {
+  .modal-content {
+    width: 65%;
+    margin: 20% auto;
+  }
+
+  iframe {
+    height: 360px;
+  }
+
+  .discussion-header-container {
+    padding: 3rem 0.5rem 0;
+  }
+
+  .questions-container::-webkit-scrollbar {
+    width: 0px;
+  }
+}
+
+@media all and (max-width: 620px) {
+  .modal-content {
+    width: 90%;
+    margin: 35% auto;
+    padding: 0.5rem;
+  }
+
+  h1 {
+    font-size: 1.3rem;
+  }
+
+  button {
+    font-size: 0.9rem;
+  }
+
+  iframe {
+    height: 220px;
+    margin-bottom: 0.5rem;
+  }
+
+  .container {
+    height: 100%;
+    margin: 1rem 0 0;
+    width: 100%;
+  }
+
+  .challenge-submission-area {
+    height: 100%;
+  }
+
+  .challenge-submission-area p {
+    font-size: 0.85rem;
+  }
+
+  .heading {
+    font-size: 0.8rem;
+  }
+
+  .challenge-container,
+  .submission-container,
+  .discussion-area,
+  .discussion-header-container {
+    margin: 0 0 0.5rem;
+    padding: 1rem;
+    border-radius: 0;
+  }
+
+  .discussion-area {
+    width: 100%;
+    height: 100%;
+  }
+
+  @media all and (max-width: 520px) {
+    .container {
+      width: 100%;
+    }
   }
 }
