--- a/src/App.css
+++ b/src/App.css
@@ -79,10 +79,12 @@ i:hover {
   overflow: auto;
 }
 
-.modal-content {
+.modal-content,
+.signup-form-content,
+.login-form-content {
   background: var(--secondary-background);
   width: 30%;
-  margin: 15% auto;
+  margin: 12% auto;
   padding: 2rem;
   box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02),
     0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035),
@@ -95,11 +97,15 @@ i:hover {
   padding: 1rem 1rem 0;
 }
 
-.modal-body {
+.modal-body,
+.signup-form-body,
+.login-form-body {
   padding: 1rem;
 }
 
-.modal-body form {
+.modal-body form,
+.signup-form-body form,
+.login-form-body form {
   display: flex;
   flex-direction: column;
 }
@@ -108,6 +114,34 @@ i:hover {
 .modal-body textarea {
   padding: 1rem;
   margin-bottom: 0.5rem;
+  border: 1px solid rgba(128, 127, 127, 0.2);
+  border-radius: 6px;
+  background: #18191b;
+  color: var(--primary-text);
+  font-size: 1rem;
+}
+
+.signup-form-header,
+.login-form-header {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.signup-form-header h1,
+.login-form-header h1 {
+  margin-bottom: 1rem;
+}
+
+.signup-form-body .input-area,
+.login-form-body .input-area {
+  display: flex;
+  flex-direction: column;
+}
+
+.signup-form-body input,
+.login-form-body input {
+  padding: 0.7rem;
+  margin: 0.3rem 0 0.5rem 0;
   border: 1px solid rgba(128, 127, 127, 0.2);
   border-radius: 6px;
   background: #18191b;
@@ -180,9 +214,11 @@ i:hover {
 .container {
   width: 80%;
   margin: 3rem auto;
-  display: flex;
+  /* display: flex; */
   height: 900px;
-  align-items: stretch;
+  /* align-items: stretch; */
+  display: grid;
+  grid-template-columns: 1.5fr 1fr;
 }
 
 .heading {
