--- a/src/App.css
+++ b/src/App.css
@@ -88,10 +88,10 @@ i:hover {
   width: 30%;
   margin: 12% auto;
   padding: 2rem;
-  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02),
-    0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035),
-    0 22.3px 17.9px rgba(0, 0, 0, 0.042), 0 41.8px 33.4px rgba(0, 0, 0, 0.05),
-    0 100px 80px rgba(0, 0, 0, 0.07);
+  box-shadow: 0 2px 4.1px -43px rgba(0, 0, 0, 0.101),
+    0 4.7px 13.8px -43px rgba(0, 0, 0, 0.129),
+    0 20px 62px -43px rgba(0, 0, 0, 0.18);
+
   border-radius: 6px;
 }
 
@@ -397,7 +397,9 @@ iframe {
   iframe {
     height: 395px;
   }
-  .modal-content {
+  .modal-content,
+  .signup-form-content,
+  .login-form-content {
     width: 50%;
     margin: 10% auto;
   }
@@ -407,10 +409,6 @@ iframe {
 }
 
 @media all and (max-width: 1045px) {
-  .modal-content {
-    width: 50%;
-    margin: 10% auto;
-  }
   .container {
     display: flex;
     flex-direction: column;
@@ -454,7 +452,9 @@ iframe {
 }
 
 @media all and (max-width: 620px) {
-  .modal-content {
+  .modal-content,
+  .signup-form-content,
+  .login-form-content {
     width: 90%;
     margin: 35% auto;
     padding: 0.5rem;
