added question thread component, moved logic and majority of question list html to questionList from questionArea, added comparable logic and html to questionThread, created api file for comments and added related logic to call

--- a/src/App.css
+++ b/src/App.css
@@ -306,6 +306,16 @@ iframe {
   margin-left: auto;
 }
 
+.discussion-header-container.thread {
+  display: flex;
+  flex-direction: column;
+}
+
+.discussion-header-container.thread button {
+  margin-right: 100%;
+  margin-top: 1.5rem;
+}
+
 .questions-container {
   overflow-y: auto;
 }
