added api call to create comments and edited incoming questions to include comments and their users

--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@ h1 {
   margin: 0;
 }
 
-button,
+button:not(.submit-comment),
 .discord-signup-button {
   margin-top: 1rem;
   background: #6271c0;
