--- a/src/App.css
+++ b/src/App.css
@@ -323,7 +323,7 @@ iframe {
 
 .questions-container::-webkit-scrollbar,
 .comments-container::-webkit-scrollbar {
-  width: 1.15rem;
+  width: 1.32rem;
 }
 
 .questions-container::-webkit-scrollbar-track,
@@ -336,7 +336,7 @@ iframe {
 .questions-container::-webkit-scrollbar-thumb,
 .comments-container::-webkit-scrollbar-thumb {
   background-color: var(--card-background);
-  border: 3px solid transparent;
+  border: 4px solid transparent;
   border-radius: 10px;
   background-clip: content-box;
 }
@@ -407,8 +407,14 @@ iframe {
   font-weight: bold;
 }
 
+.thread-question {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+}
+
 .comments-container {
-  border-radius: 6px;
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
 }
 
 @media all and (max-width: 1540px) {
