--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -27,7 +27,11 @@ body {
 }
 
 ul {
-  list-style: none;
+  list-style-type: none !important;
+}
+
+li {
+  list-style-type: none !important;
 }
 
 a {
