added is teacher check to question card, added menu if true

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -388,7 +388,11 @@ iframe {
   color: var(--tertiary-text);
 }
 
-.fa-bookmark {
+/* .fa-bookmark {
+  margin-left: auto;
+} */
+
+.icons {
   margin-left: auto;
 }
 
