renamed menu to teacher menu, added conditional rendering for questions and comments view, added route for choosing answer

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -367,6 +367,7 @@ iframe {
   padding: 1rem;
   background: var(--card-background);
   flex-shrink: 0;
+  position: relative;
 }
 
 .question-card:nth-child(n + 2) {
