--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -296,7 +296,7 @@ iframe {
     0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035);
   display: flex;
   flex-direction: column;
-  overflow-y: hidden;
+  overflow: hidden;
   max-height: 900px;
   flex-grow: 1;
 }
@@ -362,10 +362,9 @@ iframe {
 }
 
 .question-card {
-  /* margin: 0.5rem 0 0; */
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 8px;
-  padding: 1rem;
+  padding: 1rem 0 1rem 1rem;
   background: var(--card-background);
   flex-shrink: 0;
   position: relative;
