styling to try to fix scroll when teacher menu opens bottom coment and question

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -326,6 +326,7 @@ iframe {
 .questions-container,
 .comments-container {
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .questions-container::-webkit-scrollbar,
