added projects api and post request to server to submit project, updated submission area so that after project is submitted, it changes to view with date and time of submission and the button says edit submission

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -278,6 +278,19 @@ i:hover {
   color: var(--primary-text);
 }
 
+.submission-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.submission-content button {
+  margin-right: auto;
+}
+
+.submission-container .edit-submission {
+  display: flex;
+}
+
 iframe {
   margin: 1.5rem 0 1rem;
   width: 100%;
