--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -347,10 +347,15 @@ iframe {
   width: 1.32rem;
 }
 
-.questions-container::-webkit-scrollbar-track,
-.comments-container::-webkit-scrollbar-track {
+.questions-container::-webkit-scrollbar-track {
   background: #18191b;
   border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+}
+
+.comments-container::-webkit-scrollbar-track {
+  background: #18191b;
+
   border-bottom-right-radius: 6px;
 }
 
