added media query for modal width in landscape mode

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -455,7 +455,6 @@ iframe {
   }
 }
 
-/* TODO: write code for modal margin landscape view */
 @media all and (max-width: 900px) {
   .modal-content {
     width: 65%;
@@ -524,5 +523,12 @@ iframe {
   .discussion-area {
     width: 100%;
     height: 100%;
+  }
+}
+
+@media screen and (orientation: landscape) and (min-device-width: 319px) and (max-device-width: 900px) {
+  .modal-content {
+    margin: 2% auto;
+    width: 75%;
   }
 }
