--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -316,11 +316,13 @@ iframe {
 }
 
 .questions-container::-webkit-scrollbar,
-.comments-container::-webkit-scrollbar {
+.comments-container::-webkit-scrollbar,
+.account-div::-webkit-scrollbar {
   width: 1.32rem;
 }
 
-.questions-container::-webkit-scrollbar-track {
+.questions-container::-webkit-scrollbar-track,
+.account-div::-webkit-scrollbar-track {
   background: #18191b;
   border-top-right-radius: 6px;
   border-bottom-right-radius: 6px;
@@ -333,7 +335,8 @@ iframe {
 }
 
 .questions-container::-webkit-scrollbar-thumb,
-.comments-container::-webkit-scrollbar-thumb {
+.comments-container::-webkit-scrollbar-thumb,
+.account-div::-webkit-scrollbar-thumb {
   background-color: var(--card-background);
   border: 4px solid transparent;
   border-radius: 10px;
