--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -494,6 +494,10 @@ iframe {
     margin: 0;
   }
 
+  .modal-header h1 {
+    font-size: 1.5rem;
+  }
+
   .signup-form-content,
   .login-form-content {
     width: 90%;
