more font styling in challenge-submission area

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -244,6 +244,7 @@ i:hover {
   box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.05),
     0 6.7px 5.3px rgba(0, 0, 0, 0.06), 0 12.5px 10px rgba(0, 0, 0, 0.07);
   margin-right: 1rem;
+  font-weight: 300;
 }
 
 .challenge-header h1 {
@@ -266,6 +267,8 @@ i:hover {
 .submission-content h1 {
   margin-bottom: 0.2rem;
 }
+
+
 
 iframe {
   margin: 1.5rem 0 1rem;
@@ -385,7 +388,7 @@ iframe {
 .comment-body {
   padding: 0.5rem 0;
   font-size: 1rem;
- word-spacing: 0.1rem;
+  word-spacing: 0.1rem;
 }
 
 
@@ -528,6 +531,7 @@ iframe {
 
   .challenge-submission-area p {
     font-size: 0.9rem;
+  
   }
 
   .heading {
