--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -84,6 +84,10 @@ i:hover {
   padding: 1rem 1rem 0;
 }
 
+.modal-header p {
+    font-weight: 300;
+}
+
 .modal-body,
 .signup-form-body,
 .login-form-body {
