purple button css changes on mobile, reduced width and adjusted container to align items center

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -296,6 +296,7 @@ iframe {
 .discussion-header-container {
   display: flex;
   flex-shrink: 0;
+  align-items: center;
   margin-bottom: 1rem;
   padding: 3rem 1.5rem 0;
 }
