--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -485,11 +485,11 @@ iframe {
 
 @media all and (max-width: 620px) {
   h1 {
-    font-size: 1.15rem;
+    font-size: 1.2rem;
   }
 
   h4 {
-    font-size: 0.85rem;
+    font-size: 0.9rem;
   }
 
   .modal-content {
@@ -536,7 +536,7 @@ iframe {
   }
 
   .container {
-    height: 100%;
+    /* height: 100%; */
     margin: 1rem 0 0;
     width: 100%;
   }
