thread discussion header styling - align items flex start and margin on button

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -304,6 +304,7 @@ iframe {
 .discussion-header-container.thread {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
 }
 
 .discussion-header-container.thread button {
@@ -574,6 +575,10 @@ iframe {
   .discussion-area {
     width: 100%;
     height: 100%;
+  }
+
+  .discussion-header-container.thread button {
+    margin: 1rem 0 0.5rem;
   }
 }
 
