--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -495,7 +495,7 @@ iframe {
 
   .modal-content {
     width: 90%;
-    margin: 43% auto;
+    margin: 45% auto;
     padding: 0.5rem;
   }
 
@@ -579,6 +579,12 @@ iframe {
 
   .discussion-header-container.thread button {
     margin: 0.7rem 0 0;
+  }
+}
+
+@media all and (max-width: 620px) {
+  .modal-content {
+    margin: 32% auto;
   }
 }
 
