--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -291,6 +291,22 @@ iframe {
   width: 1.32rem;
 }
 
+.account-div::-webkit-scrollbar-track {
+  background: #3a3c42;
+  border-left: 4px inset rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 0 13px #809cffd5;
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+}
+
+.account-div::-webkit-scrollbar-thumb {
+  background-color: #2f3136;
+  border: 3px solid transparent;
+  border-left: 6px solid transparent;
+  border-radius: 10px;
+  background-clip: content-box;
+}
+
 .questions-container::-webkit-scrollbar-track {
   background: #18191b;
   border-top-right-radius: 6px;
@@ -299,13 +315,11 @@ iframe {
 
 .comments-container::-webkit-scrollbar-track {
   background: #18191b;
-
   border-bottom-right-radius: 6px;
 }
 
 .questions-container::-webkit-scrollbar-thumb,
-.comments-container::-webkit-scrollbar-thumb,
-.account-div::-webkit-scrollbar-thumb {
+.comments-container::-webkit-scrollbar-thumb {
   background-color: var(--card-background);
   border: 4px solid transparent;
   border-radius: 10px;
