--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -294,7 +294,7 @@ iframe {
 .account-div::-webkit-scrollbar-track {
   background: #3a3c42;
 
-  box-shadow: inset 0 0 13px #809cffd5;
+  box-shadow: inset 0 0 12px #809cffc9;
   border-top-right-radius: 6px;
   border-bottom-right-radius: 6px;
 }
@@ -304,6 +304,7 @@ iframe {
   border: 3px solid transparent;
   border-radius: 10px;
   background-clip: content-box;
+  box-shadow: 0 0 10px #809cff3a;
 }
 
 .questions-container::-webkit-scrollbar-track {
