--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -292,19 +292,19 @@ iframe {
 }
 
 .account-div::-webkit-scrollbar-track {
-  background: #3a3c42;
+  background: #2f3136;
 
-  box-shadow: inset 0 0 12px #809cffc9;
+  box-shadow: inset 0 0 6px #809cffc9;
   border-top-right-radius: 6px;
   border-bottom-right-radius: 6px;
 }
 
 .account-div::-webkit-scrollbar-thumb {
-  background-color: #2f3136;
-  border: 3px solid transparent;
+  background-color: #3a3c42;
+  border: 1px solid transparent;
   border-radius: 10px;
   background-clip: content-box;
-  box-shadow: 0 0 10px #809cff3a;
+  box-shadow: 1px 1px 4px #809cffd5, -1px -1px 4px #809cffd5, 0 0 10px #809cffd5;
 }
 
 .questions-container::-webkit-scrollbar-track {
