styling - wrapper around iframe and iframe position absolute, width and height 100%, reduced width of user menu mobile, adding margin bottom to submission h1 on mobile to match design

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -53,6 +53,10 @@ i:hover {
   cursor: pointer;
 }
 
+/* .player {
+  max-width: 100%;
+} */
+
 @media all and (max-width: 620px) {
   h1 {
     font-size: 1.3rem;
